Fixed icon not aligning properly in the fab button

--- a/src/app/account/components/user-menu-button/user-menu-button.component.scss
+++ b/src/app/account/components/user-menu-button/user-menu-button.component.scss
@@ -26,7 +26,7 @@ $accent: map-get($custom-theme, accent);
 }
 
 .profile-icon {
-    font-size: 40px;
+    font-size: 38px;
 }
 
 a {
